# fedranklite-slm

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml
configs/experiments/: baseline_cvx.yaml  baseline_fixed.yaml  lite_iid.yaml  lite_noniid_deadline.yaml
configs/experiments/glue/: mrpc_cvx.yaml  mrpc_lite.yaml  qnli_cvx.yaml  qnli_lite.yaml  rte_cvx.yaml  rte_lite.yaml  sst2_cvx.yaml  sst2_lite.yaml  stsb_cvx.yaml  stsb_lite.yaml
docs/: BASELINE.md  exemplo.md
scripts/: run.py  run_slurm.sh
src/: aggregation.py  client.py  config.py  data.py  engine.py  metrics.py  models.py
src/schedulers/: __init__.py  base.py  cvx.py  fixed.py  lite.py
tests/: test_aggregation.py  test_data_partition.py  test_masking.py  test_metrics.py  test_scheduler.py
