[project]
name = "fedranklite-slm"
version = "0.1.0"
description = "Federated LoRA rank scheduling for SLMs"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "transformers>=4.40",
    "peft>=0.10",
    "bitsandbytes>=0.43",
    "accelerate>=0.30",
    "datasets>=2.19",
    "pyyaml>=6.0",
    "psutil>=5.9",
    "numpy>=1.26",
    "scipy>=1.12",
]

[project.optional-dependencies]
cvx = ["cvxpy>=1.4"]
wandb = ["wandb>=0.16"]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
